<?xml version="1.0"?>
<package>
  <name>explainable_planning</name>
  <version>0.0.0</version>
  <description>Interface to ROSPlan for explainable AI Planning functions.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>rosplan_planning_system</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>explainable_planning_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rosplan_dispatch_msgs</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>
  <run_depend>rosplan_planning_system</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>explainable_planning_msgs</run_depend>

  <export></export>
</package>
